--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         >
         <div class="header-btn">
           <a href="tel:+380730000000" class="shopping-cart-btn">
-            <!-- <svg class="shopping-cart-pic" width="24" height="24">
+            <svg class="shopping-cart-pic" width="24" height="24">
               <use href="./images/icons.svg#icon-shopping-cart"></use>
-            </svg> -->
-            <svg
+            </svg>
+            <!-- <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
               height="24"
@@ -61,7 +61,7 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
-            </svg>
+            </svg> -->
           </a>
           <!-- <button class="shopping-cart-btn" type="button">
             <svg class="shopping-cart-pic" width="24" height="24">
@@ -100,7 +100,12 @@
             </svg> -->
           <!-- </button> -->
           <label id="switch" class="switch">
-            <input type="checkbox" onchange="toggleTheme()" id="slider" />
+            <input
+              type="checkbox"
+              onchange="toggleTheme()"
+              id="slider"
+              class="switch-input"
+            />
             <span class="slider round"></span>
           </label>
           <button class="mobile-menu-open" type="button">
