--- a/favorites.html
+++ b/favorites.html
@@ -47,7 +47,7 @@
           </label>
           <button class="mobile-menu-open" data-menu-open type="button">
             <svg class="mobile-menu-pic" width="32" height="32">
-              <use href="./images/icons.svg#icon-align-justify"></use>
+              <use href="./images/icons.svg#icon-hamburger"></use>
             </svg>
           </button>
         </div>
@@ -74,7 +74,7 @@
             </ul>
           </nav>
         </div>
-        <label class="switch-mob switch">
+        <label id="mob-switch" class="switch-mob switch">
           <input
             type="checkbox"
             onchange="toggleTheme()"
@@ -87,7 +87,7 @@
     <main>
       <section class="favorites">
         <div class="fav-container">
-          <picture class="fav-image">
+          <picture class="fav-image thumb">
             <source
               srcset="
                 ./images/card-desc-min.jpg 1x,
