--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </label>
           <button class="mobile-menu-open" data-menu-open type="button">
             <svg class="mobile-menu-pic" width="32" height="32">
-              <use href="./images/icons.svg#icon-align-justify"></use>
+              <use href="./images/icons.svg#icon-hamburger"></use>
             </svg>
           </button>
         </div>
@@ -75,7 +75,7 @@
             </ul>
           </nav>
         </div>
-        <label class="switch-mob switch">
+        <label id="mob-switch" class="switch-mob switch">
           <input
             type="checkbox"
             onchange="toggleTheme()"
