update fevorites html & css

--- a/favorites.html
+++ b/favorites.html
@@ -89,47 +89,55 @@
         <div class="fav-container">
           <div class="fav-hero">
             <div class="static-block">
-            <h1 class="visually-hidden">Favorites</h1>
-            <picture class="fav-image thumb">
-              <source
-                srcset="
-                  ./images/card-desc-min.jpg 1x,
-                  ./images/card-desc-min-2x  2x
-                "
-                media="(min-width: 1280px)"
-              />
-              <source
-                srcset="
-                  ./images/card-tab-min.jpg 1x,
-                  ./images/card-tab-min-2x  2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                  ./images/card-mob-min.jpg 1x,
-                  ./images/card-mob-min-2x  2x
-                "
-                media="(max-width: 767px)"
-              />
+              <h1 class="visually-hidden">Favorites</h1>
+              <picture class="fav-image thumb">
+                <source
+                  srcset="
+                    ./images/card-desc-min.jpg 1x,
+                    ./images/card-desc-min-2x  2x
+                  "
+                  media="(min-width: 1280px)"
+                />
+                <source
+                  srcset="
+                    ./images/card-tab-min.jpg 1x,
+                    ./images/card-tab-min-2x  2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/card-mob-min.jpg 1x,
+                    ./images/card-mob-min-2x  2x
+                  "
+                  media="(max-width: 767px)"
+                />
 
-              <img src="./images/card-mob-min.jpg" alt="tasty dish" />
-            </picture>
+                <img src="./images/card-mob-min.jpg" alt="tasty dish" />
+              </picture>
             </div>
-          <div class="block-for-empty">
-            <svg class="recipe-icon-pic" width="68" height="58">
-              <use href="./images/icons.svg#icon-elements"></use>
-            </svg>
-            <p class="message-for-empty">It appears that you haven't added any recipes to your favorites yet. To get started, you can add recipes that you like to your favorites for easier access in the future.</p>
+            <div class="block-for-empty">
+              <svg class="recipe-icon-pic" width="68" height="58">
+                <use href="./images/icons.svg#icon-elements"></use>
+              </svg>
+              <p class="message-for-empty">
+                It appears that you haven't added any recipes to your favorites
+                yet. To get started, you can add recipes that you like to your
+                favorites for easier access in the future.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="fav-category-block">
-            <button class="fav-category-fltr-btn" type="button">All categories</button>
-            <div class="fav-category-div" id="category-filter-div">
+          <div class="recipes-block">
+            <div class="fav-category-block" id="category-filter-div">
+              <button class="fav-category-fltr-btn" type="button">
+                All categories
+              </button>
+              <ul class="fav-category-list"></ul>
             </div>
-        </div>
-        <div class="fav-recipe-block">
-          <ul class="favorite-card-list"></ul>
+            <div class="list-recipes-block">
+              <ul class="fav-recipe-card-list"></ul>
+            </div>
+          </div>
         </div>
       </section>
     </main>
